CJAL-10/10/2018- validacion campos requeridos en homologacion con las formas de jaime

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
@@ -67,7 +67,7 @@
                                     <b>Jefe de estaciones:</b>
                                 </div>
                                 <div class="col-sm-4">
-                                    @Html.LabelFor(model => model.Operador, (string)((@ViewBag.CajaGeneral == null) ? "value" : @ViewBag.IdCliente[0].CajaGeneral), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.OperadorChoferNombre, (string)((@ViewBag.CajaGeneral == null) ? "value" : @ViewBag.IdCliente[0].CajaGeneral), new { @class = "form-control" })
                                 </div>
                                 <div class="col-sm-05">
                                     <b></b>
