--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
@@ -72,6 +72,7 @@
                                     <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                 }
                             </select>
+                            @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
                         </div>
 
                     </div>
@@ -116,13 +117,13 @@
                                 <div class="col-lg-8 col-md-8 col-sm-8">
                                     <div class="form-group" id="hide_razonS">
                                         Razón social:*
-                                        <input type="text" name="RazonSocial" id="txtRS" class="form-control"/>
+                                        <input type="text" name="RazonSocial" id="txtRS" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4">
                                     <div class="form-group">
                                         Rfc:*
-                                        <input type="text" name="Rfc" id="txtRfc" class="form-control"  />
+                                        <input type="text" name="Rfc" id="txtRfc" class="form-control" />
                                     </div>
                                 </div>
 
@@ -131,7 +132,7 @@
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="card">
                                         <div class="header">
-                                            <h2><strong>Representante Legal </strong></h2>
+                                            <h2><strong>Representante Legal</strong></h2>
                                         </div>
                                         <div class="body">
                                             <div class="row clearfix">
@@ -238,7 +239,7 @@
                                 <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="form-group">
                                         <div>
-                                            Dias <input name="limiteCreditoDias" type="number"  />
+                                            Dias <input name="limiteCreditoDias" type="number" />
                                         </div>
                                     </div>
                                 </div>
@@ -292,7 +293,7 @@
                             <div class="row clearfix">
                                 <div class="col-lg-4 col-md-4 col-sm-4">
                                     <div class="form-group">
-                                        Teléfono 1: <input id="txtTel1" name="Telefono1" type="text" class="form-control"  />
+                                        Teléfono 1: <input id="txtTel1" name="Telefono1" type="text" class="form-control" />
                                     </div>
                                 </div>
 
@@ -308,7 +309,7 @@
                                     <div class="form-group">
                                         <div>
                                             Email 1:
-                                            <input id="txtEmail1" type="text" name="Email1" class="form-control"  />
+                                            <input id="txtEmail1" type="text" name="Email1" class="form-control" />
                                         </div>
                                     </div>
                                 </div>
@@ -403,7 +404,7 @@
                 <div class="row clearfix">
                     <div class="col-lg-5 col-md-5 col-sm-5">
                         <div class="form-group">
-                            <input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left"/>
+                            <input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-7">
@@ -415,7 +416,21 @@
                     </div>
                 </div>
             </div>
-
+            @if (ViewBag.MensajeError != null)
+                {
+                <div class="row clearfix">
+                    <div id="divMensajeError" class="container">
+                        <div class="alert alert-danger">
+                            <div class="alert-icon">
+                                <i class="zmdi zmdi-block"></i>
+                            </div>
+                            <strong>
+                                <label>@ViewBag.MensajeError</label>
+                            </strong>
+                        </div>
+                    </div>
+                </div>
+            }
         </div>
     </section>
 }
